# PHM-Scanner

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MODULES.md  NEXT_STEPS.md  SOURCES.md  VISION.md
phm/: __init__.py  cli.py  crypto_engine.py
phm/analysis/: __init__.py
phm/analysis/file/: native.py
phm/core/: __init__.py  artifacts.py  autodetect.py  correlation.py  models.py  orchestrator.py  plugin.py  recommendations.py  registry.py  reporting.py  storage.py  summary.py
phm/plugins/: __init__.py  github_common.py
phm/plugins/crypto/: base64_decoder.py  hash_identifier.py  hex_decoder.py  rot13_decoder.py  url_decoder.py  xor_decoder.py
phm/sources/: __init__.py  base.py  common.py
spectre/: __init__.py  cli.py  crypto_engine.py
spectre/analysis/: __init__.py
spectre/core/: __init__.py  artifacts.py  autodetect.py  correlation.py  models.py  orchestrator.py  plugin.py  recommendations.py  registry.py  reporting.py  storage.py  summary.py
spectre/plugins/: __init__.py  github_common.py
spectre/sources/: __init__.py  base.py  cache.py
tests/: test_artifacts.py  test_autodetect.py  test_crypto_engine.py  test_file_analysis.py  test_recommendations.py  test_registry.py  test_reporting.py  test_sources.py  test_storage_and_correlation.py  test_technology_fingerprint.py
(+61 files in other folders)
