[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phm-scanner"
version = "0.1.3"
description = "Command-line tool for first-pass cybersecurity analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PHM Maintainer"}]
keywords = ["cybersecurity", "forensics", "osint", "reconnaissance", "ctf", "cryptography", "malware-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dns = ["dnspython>=2.6"]
dev = []

[project.urls]
Homepage = "https://github.com/sv1911-a/PHM-Scanner"
Documentation = "https://github.com/sv1911-a/PHM-Scanner/tree/main/docs"
Issues = "https://github.com/sv1911-a/PHM-Scanner/issues"
Source = "https://github.com/sv1911-a/PHM-Scanner"

[project.scripts]
phm = "phm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phm*"]
